syntax = "proto3";

package litrpc;

option go_package = "github.com/lightninglabs/lightning-terminal/litrpc";

service Proxy {
    /* litcli: `getinfo`
    GetInfo returns general information concerning the LiTd node.
    */
    rpc GetInfo (GetInfoRequest) returns (GetInfoResponse);

    /* litcli: `stop`
    StopDaemon will send a shutdown request to the interrupt handler,
    triggering a graceful shutdown of the daemon.
    */
    rpc StopDaemon (StopDaemonRequest) returns (StopDaemonResponse);
}

message StopDaemonRequest {
}

message StopDaemonResponse {
}

message GetInfoRequest {
}

message GetInfoResponse {
    // The version of the LiTd software that the node is running.
    string version = 1;
}